fixed button spacing in forms
fixed button spacing in forms

--- a/TicketingSystemFrontend/src/app/adminview/adminanalytics/adminanalytics.component.css
+++ b/TicketingSystemFrontend/src/app/adminview/adminanalytics/adminanalytics.component.css
@@ -106,7 +106,7 @@ h2 {
 
 .requests {
   padding: 8px;
-  background-color: #d9291c;
+  background-color: #FFB81C;
   border-radius: 10px;
 }
 
