--- a/TicketingSystemFrontend/src/app/technicianview/techniciandashboard/technicianview.component.css
+++ b/TicketingSystemFrontend/src/app/technicianview/techniciandashboard/technicianview.component.css
@@ -368,9 +368,9 @@ clear: both;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 25%;
-  margin-left: 130px;
-margin-right: 0;
+  width: 30%;
+  margin-left: 95px;
+margin-right: 10px;
 }
 
 .cancel-button {
@@ -380,7 +380,7 @@ background-color: #94d571;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 25%;
+  width: 30%;
 }
 
 .cancel-button:hover,
