--- a/TicketingSystemFrontend/src/app/technicianview/technicianhistory/technicianhistory.component.css
+++ b/TicketingSystemFrontend/src/app/technicianview/technicianhistory/technicianhistory.component.css
@@ -420,9 +420,9 @@ padding: 12px 12px;
 border: none;
 border-radius: 4px;
 cursor: pointer;
-width: 25%;
-margin-left: 130px;
-margin-right: 0;
+width: 30%;
+margin-left: 95px;
+margin-right: 10px;
 }
 
 .cancel-button {
@@ -432,7 +432,7 @@ padding: 12px 12px;
 border: none;
 border-radius: 4px;
 cursor: pointer;
-width: 25%;
+width: 30%;
 }
 
 .cancel-button:hover,
