--- a/TicketingSystemFrontend/src/app/userview/userview-dashboard/userview.component.css
+++ b/TicketingSystemFrontend/src/app/userview/userview-dashboard/userview.component.css
@@ -421,8 +421,8 @@ clear: both;
   border-radius: 4px;
   cursor: pointer;
   width: 30%;
-  margin-left: 130px;
-margin-right: 0;
+  margin-left: 95px;
+margin-right: 10px;
 }
 
 .cancel-button {
@@ -432,7 +432,7 @@ background-color: #94d571;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 25%;
+  width: 30%;
 }
 
 .cancel-button:hover,
